testsuite/tests/parser/should_fail/ExportCommaComma.stderr

ExportCommaComma.hs:2:38: parse error on input ‛,’
